# portodjangostarter

./: Readme.md  manage.py  pyproject.toml
portoapp/: asgi.py  settings.py  urls.py  wsgi.py
portoapp/_app_template/: apps.py-tpl
portoapp/_app_template/UI/API/Controllers/: CreateController.py-tpl
portoapp/_app_template/UI/API/Routes/: index.py-tpl
portoapp/_app_template/UI/API/Transformers/: Transformer.py-tpl
portoapp/config/: PortoAppConfig.py
portoapp/management/commands/: start_porto_app.py  startcontainer.py
portodjangostarter/: asgi.py  settings.py  wsgi.py
portodjangostarter/_app_template/: apps.py-tpl
portodjangostarter/_app_template/actions/: CreateAction.py-tpl
portodjangostarter/_app_template/tasks/: CreateTask.py-tpl
portodjangostarter/_app_template/ui/api/transformers/: Transformer.py-tpl
product/: apps.py
product/actions/: CreateAction.py
product/tasks/: CreateTask.py
product/ui/api/controllers/: CreateController.py
product/ui/api/routes/: index.py
product/ui/api/transformers/: Transformer.py
